[gd_scene load_steps=7 format=3 uid="uid://f2fnv1w2k1vw"]

[ext_resource type="Script" path="res://scripts/enemy_crab.gd" id="1_aevtm"]
[ext_resource type="Texture2D" uid="uid://dwe5xyelh40gh" path="res://assets/crab.png" id="2_u562s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hy6tl"]
radius = 16.0
height = 48.0

[sub_resource type="Animation" id="Animation_6dar5"]
resource_name = "boiling"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25209),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_nyl4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1v51n"]
_data = {
"RESET": SubResource("Animation_nyl4y"),
"boiling": SubResource("Animation_6dar5")
}

[node name="EnemyCrab" type="Area2D" groups=["enemy"]]
script = ExtResource("1_aevtm")

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(17, -2)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_u562s")
hframes = 2

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_hy6tl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1v51n")
}

[node name="SpeedResetTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SpeedResetTimer" to="." method="_on_speed_reset_timer_timeout"]
